Public guidance content updates + new heading sizes

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -29,7 +29,7 @@ $govuk-assets-path: '/govuk/assets/';
 @import "pins/uploads";
 @import "pins/tables";
 @import "pins/email";
-
+@import "pins/public-guidance";
 
 .autocomplete__option {
 	font-family: "nta", Arial, sans-serif;
@@ -115,4 +115,3 @@ $govuk-assets-path: '/govuk/assets/';
 .remove-bottom-border {
 	border-bottom: none;
 }
-
