--- a/app/views/guidance/full/v1/before-you-appeal.html
+++ b/app/views/guidance/full/v1/before-you-appeal.html
@@ -55,10 +55,10 @@
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">Before you appeal</h2>
+        <h2 class="govuk-heading-l" id="part-title">Before you appeal</h2>
         <p class="govuk-body">
           An appeal needs careful preparation. Before you appeal, you need to consider:
         </p>
@@ -69,25 +69,33 @@
           <li>if you need to tell anyone else about your appeal</li>
         </ul>
 
-        <h2 class="govuk-heading-l">The alternative to an appeal</h2>
+        <h2 class="govuk-heading-l pins-guidance-h2">
+          The alternative to an appeal
+        </h2>
+
         <p class="govuk-body">
           An appeal is not your only option.
         </p>
+
         <p class="govuk-body">
           1 in 5 appeals is successful.
         </p>
 
-        <h3 class="govuk-heading-m">Refused planning permission</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">
+          Refused planning permission
+        </h3>
+
         <p class="govuk-body">
           You can talk to your local planning department about resubmitting your application. There may be small changes you can make to help you get planning permission.
         </p>
 
-        <h3 class="govuk-heading-m">Conditions for your planning permission</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">Conditions for your planning permission</h3>
         <p class="govuk-body">
           You can apply for permission to vary or remove the conditions. You make this application to your local planning department.
         </p>
 
-        <h3 class="govuk-heading-m">A late planning decision</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">No decision by the local planning department’s deadline</h3>
+
         <p class="govuk-body">
           You can speak to your local planning department to find out if it's likely to make a decision soon.
         </p>
@@ -98,7 +106,7 @@
           If your local planning department makes a decision after you've made the appeal, the Planning Inspectorate will take it into account. But the Planning Inspectorate could disagree and make a different decision.
         </p>
 
-        <h2 class="govuk-heading-l">How the Planning Inspectorate makes its decision</h2>
+        <h2 class="govuk-heading-l pins-guidance-h2">How the Planning Inspectorate makes its decision</h2>
         <p class="govuk-body">
           The Planning Inspectorate can make a decision about your appeal in 1 of 3 ways:
         </p>
@@ -114,9 +122,9 @@
           You should choose how you will answer in advance. The option you choose affects the information and documents you must submit.
         </p>
 
-        <h3 class="govuk-heading-m">Written representations</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">Written representations</h3>
         <p class="govuk-body">
-          This is when a Planning Inspector makes a decision based on written statements from:
+          This is when the Planning Inspectorate makes a decision based on written statements from:
         </p>
         <ul class="govuk-list govuk-list--bullet">
           <li>you</li>
@@ -127,38 +135,55 @@
           This is the most common way that the Planning Inspectorate makes decisions about appeals.
         </p>
 
-        <h3 class="govuk-heading-m">Hearing</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">Hearing</h3>
+
         <p class="govuk-body">
-          A hearing is an event held by a Planning Inspector, with you and the local planning department. The Inspector asks questions to help them understand all the issues in your appeal. This can be held in-person or online.
+          Hearings are for appeals that would be too difficult to decide from only written representations.
         </p>
+
         <p class="govuk-body">
-          Hearings are for appeals that would be too difficult to decide based on written statements alone.
+          At the hearing you and the local planning department answer questions about your appeal. This helps the Planning Inspectorate to understand all the issues in your appeal.
         </p>
+
+        <p class="govuk-body">
+          The hearing can be in-person or online and usually lasts no longer than a day
+        </p>
+
+        <p class="govuk-body">
+          Other interested parties can also ask to be at the hearing, for example, neighbours.
+        </p>
+
         <p class="govuk-body">
           <b>[example]</b>
         </p>
+
         <p class="govuk-body">
           If you choose a hearing, your appeal needs a statement of common ground. This is a document that says what you and the local planning department agree on.
         </p>
 
-        <h3 class="govuk-heading-m">Public inquiry</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">Public inquiry</h3>
+
         <p class="govuk-body">
-          This is when you and the local planning department use legal representatives to question expert witnesses.
+          Public inquiries are for appeals with lots of complex issues and evidence to consider.
         </p>
+
         <p class="govuk-body">
-          This is for appeals with lots of complex issues and evidence to consider.
+          This is when you and the local planning department use legal representatives to question expert witnesses. The inquiry can be in-person or online and usually lasts a few days.
         </p>
+
         <p class="govuk-body">
           <b>[example]</b>
         </p>
+
         <p class="govuk-body">
           You should get legal advice if you think your appeal needs a public inquiry. A legal representative can help you plan who your witnesses will be. You should start planning this before you submit your appeal.
         </p>
+
         <p class="govuk-body">
           If you choose a public inquiry, your appeal needs a statement of common ground. This is a document that says what you and the local planning department agree on.
         </p>
-        
-        <h2 class="govuk-heading-l">Documents to prepare</h2>
+
+        <h2 class="govuk-heading-l pins-guidance-h2">Documents to prepare</h2>
         <p class="govuk-body">
           You must submit certain documents with your appeal.
         </p>
@@ -179,7 +204,7 @@
           Each file must be smaller than 15MB.
         </p>
 
-        <h3 class="govuk-heading-m">An appeal statement</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">An appeal statement</h3>
         <p class="govuk-body">
           Your appeal statement is the main part of your appeal. This is where you explain your reasons for appealing.
         </p>
@@ -190,7 +215,7 @@
           Find out more about <a href="#" class="govuk-link">writing your appeal statement</a>.
         </p>
 
-        <h3 class="govuk-heading-m">Documents from your planning application</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">Documents from your planning application</h3>
         <p class="govuk-body">
           You'll be asked to submit:
         </p>
@@ -208,7 +233,7 @@
           The documents must be readable and not have any censored text.
         </p>
 
-        <h3 class="govuk-heading-m">Draft statement of common ground</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">Draft statement of common ground</h3>
         <p class="govuk-body">
           Hearing and public inquiry appeals need a statement of common ground. This says what you and the local planning department agree on. It helps the Planning Inspector to focus on where you disagree.
         </p>
@@ -222,7 +247,7 @@
           Find out more about <a href="#" class="govuk-link">drafting your statement of common ground</a>.
         </p>
 
-        <h2 class="govuk-heading-l">Telling people about your appeal</h2>
+        <h2 class="govuk-heading-l pins-guidance-h2">Telling people about your appeal</h2>
         <p class="govuk-body">
           If you do not own all the land involved in the appeal, you must tell the people that do before you appeal.
         </p>
@@ -287,14 +312,14 @@
 
       </div>
 
-     
+
     </div>
 
     <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        
+
   <div class="gem-c-contextual-footer">
-    
+
   <div class="gem-c-related-navigation">
 
 
