--- a/app/views/guidance/full/v1/claim-costs-for-your-appeal.html
+++ b/app/views/guidance/full/v1/claim-costs-for-your-appeal.html
@@ -55,10 +55,10 @@
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">Claim costs for your appeal</h2>
+        <h2 class="govuk-heading-l" id="part-title">Claim costs for your appeal</h2>
         <p class="govuk-body">
           If someone involved in your appeal has cost you money by behaving unreasonably, you can make a claim to get the costs back from them.
         </p>
@@ -110,14 +110,14 @@
 
       </div>
 
-     
+
     </div>
 
     <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        
+
   <div class="gem-c-contextual-footer">
-    
+
   <div class="gem-c-related-navigation">
 
 
