--- a/app/views/guidance/full/v1/how-to-appeal.html
+++ b/app/views/guidance/full/v1/how-to-appeal.html
@@ -55,10 +55,10 @@
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">How to appeal</h2>
+        <h2 class="govuk-heading-l" id="part-title">How to appeal</h2>
         <p class="govuk-body">
           You appeal using the <a href="#" class="govuk-link">appeal a planning decision service</a>.
         </p>
@@ -69,7 +69,7 @@
           An appeal is complete when it has all the documents and information the Planning Inspectorate needs to progress your appeal.
         </p>
 
-        <h2 class="govuk-heading-l">Your appeal statement</h2>
+        <h2 class="govuk-heading-l pins-guidance-h2">Your appeal statement</h2>
         <p class="govuk-body">
           Your appeal statement is the main part of your appeal. This is where you explain your reasons for appealing.
         </p>
@@ -77,7 +77,7 @@
           You can only submit this once, so it's important to get it right.
         </p>
 
-        <h3 class="govuk-heading-m">How to write your appeal statement</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">How to write your appeal statement</h3>
         <p class="govuk-body">
           You should prepare this in a document to upload with your appeal.
         </p>
@@ -138,12 +138,12 @@
           <b>xxxxx</b>
         </p>
 
-        <h2 class="govuk-heading-l">Draft statement of common ground</h2>
+        <h2 class="govuk-heading-l pins-guidance-h2">Draft statement of common ground</h2>
         <p class="govuk-body">
           A statement of common ground says what you and the local planning department agree on. You must upload a draft of this with your appeal.
         </p>
 
-        <h3 class="govuk-heading-m">How to write your draft statement of common ground</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">How to write your draft statement of common ground</h3>
         <p class="govuk-body">
           You should draft your statement using the <a href="#" class="govuk-link">statement of common ground pro forma</a>.
         </p>
@@ -195,14 +195,14 @@
 
       </div>
 
-     
+
     </div>
 
     <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        
+
   <div class="gem-c-contextual-footer">
-    
+
   <div class="gem-c-related-navigation">
 
 
