--- a/app/views/guidance/full/v1/overview.html
+++ b/app/views/guidance/full/v1/overview.html
@@ -56,15 +56,15 @@
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">Overview</h2>
+        <h2 class="govuk-heading-l" id="part-title">Overview</h2>
 
         <p class="govuk-body">
-          This guidance is for people who want to appeal most types of planning decision, or a late planning decision.
+          This guidance is for people who want to appeal most types of planning decision. This includes if you have not got a decision by the local planning department’s deadline.
         </p>
-        
+
         <div class="govuk-inset-text">
           <p class="govuk-body">
             You need different guidance if you want to appeal a refused application for:
@@ -78,18 +78,24 @@
           <p class="govuk-body">
             Go to the <a href="#" class="govuk-link">appeal a householder planning decision guidance</a>.
           </p>
+
+          <p class="govuk-body">
+            If your appeal is about listed building consent, you need the appeal a listed building consent decision guidance.
+          </p>
+
         </div>
 
-        <h2 class="govuk-heading-l">Appealing to the Planning Inspectorate</h2>
+        <h2 class="govuk-heading-l pins-guidance-h2">Appealing to the Planning Inspectorate</h2>
 
         <p class="govuk-body">
           You make your appeal to the Planning Inspectorate.
         </p>
+
         <p class="govuk-body">
-          The Planning Inspectorate is an independent and impartial government body that decides appeals about planning applications.
+          The Planning Inspectorate is an independent and impartial government body that decides planning appeals on behalf of the Secretary of State.
         </p>
 
-<!-- Navigation-->
+        <!-- Navigation-->
         <nav class="gem-c-pagination govuk-!-margin-top-9" role="navigation" aria-label="Pagination">
           <ul class="gem-c-pagination__list" data-module="track-click">
 
@@ -119,14 +125,14 @@
 
       </div>
 
-     
+
     </div>
 
     <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        
+
   <div class="gem-c-contextual-footer">
-    
+
   <div class="gem-c-related-navigation">
 
 
