--- a/app/views/guidance/full/v1/stages-of-an-appeal.html
+++ b/app/views/guidance/full/v1/stages-of-an-appeal.html
@@ -55,12 +55,12 @@
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">The stages of an appeal</h2>
+        <h2 class="govuk-heading-l" id="part-title">The stages of an appeal</h2>
 
-        <h3 class="govuk-heading-m">1. Submitting your appeal</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">1. Submitting your appeal</h3>
         <p class="govuk-body">
           Submit your appeal statement and other documents using the <a href="#" class="govuk-link">appeal a planning decision service</a>.
         </p>
@@ -68,18 +68,17 @@
           Once you've done this, you get a PDF copy of your appeal. You must send this to the local planning department with a copy of your appeal statement.
         </p>
 
-        <h3 class="govuk-heading-m">2. Checking your appeal</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">2. Checking your appeal</h3>
+
         <p class="govuk-body">
-          A case officer checks you've submitted everything the Planning Inspectorate needs to progress your appeal.
+          The Planning Inspectorate checks you've submitted everything it needs to progress your appeal.
         </p>
         <p class="govuk-body">
-          They contact you once they have done this.
-        </p>
-        <p class="govuk-body">
-          If anything is missing, they ask you to resubmit it. You have until your appeal deadline to submit any missing information.
+          They contact you once they have done this. If anything is missing, they ask you to submit it.
         </p>
 
-        <h3 class="govuk-heading-m">3. Evidence from your application</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">3. Evidence from your application</h3>
+
         <p class="govuk-body">
           The local planning department sends the Planning Inspectorate a copy of the case file for your planning application.
         </p>
@@ -87,66 +86,81 @@
           You get a copy of this for your information.
         </p>
 
-        <h3 class="govuk-heading-m">4. Statements from other parties</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">4. Statements from other parties</h3>
+
         <p class="govuk-body">
-          The local planning department can choose to respond to your appeal with a written statement. Other interested parties can also submit statements about your appeal. For example, your neighbours.
+          The local planning department can respond to your appeal with a written statement. Other interested parties can also submit statements about your appeal. For example, your neighbours.
         </p>
         <p class="govuk-body">
           You get copies of any statements for your information.
         </p>
 
-        <h3 class="govuk-heading-m">5. Responding to the evidence</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">5. Responding to the evidence</h3>
+
         <p class="govuk-body">
           This stage depends on how the Planning Inspectorate is deciding your appeal.
         </p>
+
         <p class="govuk-body">
           'Evidence' is anything that's been submitted by you, your local planning department, or another interested party.
         </p>
+
         <p class="govuk-body">
           Find out <a href="#" class="govuk-link">how the Planning Inspectorate can decide your appeal</a>.
         </p>
-        
+
         <h4 class="govuk-heading-s">Written representations appeals</h4>
+
         <p class="govuk-body">
-          You have the opportunity to respond to any statements submitted by other parties. You do this in writing. This is called your 'final comments'.
+          You can respond to any statements submitted by other parties. You do this in writing. This is called your 'final comments'.
         </p>
+
         <p class="govuk-body">
           Your local planning department can also submit final comments.
         </p>
-        
+
         <h4 class="govuk-heading-s">Hearing appeals</h4>
+
         <p class="govuk-body">
-          The Planning Inspectorate arranges the hearing. They agree a date and a venue with you and your local planning department. The hearing can be in-person or online.
+          The Planning Inspectorate arranges the hearing. They agree a date and a venue with you and your local planning department.
         </p>
+
         <p class="govuk-body">
-          At the hearing, you and the local planning department answer questions from the Planning Inspector about your appeal and its evidence.
+          At the hearing, you and the local planning department answer questions about your appeal and its evidence. If other interested parties have asked to be there, they may be asked questions too.
         </p>
-        
+
         <h4 class="govuk-heading-s">Public inquiry appeals</h4>
+
         <p class="govuk-body">
-          The Planning Inspectorate arranges the inquiry. They agree a date and a venue with you and your local planning department. The inquiry can be in-person or online and usually lasts a few days.
-        </p>
-        <p class="govuk-body">
-          You and your legal representative must share your arguments with the Planning Inspector in advance.
-        </p>
-        <p class="govuk-body">
-          At the inquiry, you and your local planning department's legal representatives cross-examine the evidence. They question you, the local planning department, and expert witnesses.
+          The Planning Inspectorate arranges the inquiry. They agree a date and a venue with you and your local planning department.
         </p>
 
-        <h3 class="govuk-heading-m">6. Site visit</h3>
         <p class="govuk-body">
-          A Planning Inspector visits your appeal site to see how your development might impact the surrounding area.
-        </p>
-        <p class="govuk-body">
-          If they can, they do this without entering your site. If the Inspector needs to enter, a case officer arranges this with you beforehand so you can let them in.
-        </p>
-        <p class="govuk-body">
-          Sometimes, the Inspector decides that the appeal does not need a site visit.
+          You and your legal representative must share your arguments with the Planning Inspectorate in advance.
         </p>
 
-        <h3 class="govuk-heading-m">7. Decision</h3>
         <p class="govuk-body">
-          The Inspector uses the evidence from you, the local planning department and other parties to make a decision.
+          At the inquiry, your and your local planning department's legal representatives cross-examine the evidence. They question you, the local planning department, and expert witnesses.
+        </p>
+
+        <h3 class="govuk-heading-m pins-guidance-h3">6. Site visit</h3>
+
+        <p class="govuk-body">
+          The Planning Inspectorate visits your appeal site to see how your development might impact the surrounding area.
+        </p>
+
+        <p class="govuk-body">
+          If they can, they do this without entering your site. If they need you to give them access, they arrange this with you beforehand.
+        </p>
+
+        <p class="govuk-body">
+          Sometimes, they decide the appeal does not need a site visit.
+        </p>
+
+        <h3 class="govuk-heading-m pins-guidance-h3">7. Decision</h3>
+
+        <p class="govuk-body">
+          The Planning Inspectorate uses the evidence from you, the local planning department and other parties to make a decision.
         </p>
         <p class="govuk-body">
           <a href="#" class="govuk-link">Check how long planning appeal decisions are taking</a>
@@ -196,14 +210,14 @@
 
       </div>
 
-     
+
     </div>
 
     <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        
+
   <div class="gem-c-contextual-footer">
-    
+
   <div class="gem-c-related-navigation">
 
 
