--- a/app/views/guidance/full/v1/your-appeal-decision.html
+++ b/app/views/guidance/full/v1/your-appeal-decision.html
@@ -55,61 +55,97 @@
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">Your appeal decision</h2>
+        <h2 class="govuk-heading-l" id="part-title">Your appeal decision</h2>
         <p class="govuk-body">
           A Planning Inspector uses evidence from you, the local planning department and other interested parties to decide your appeal.
         </p>
+
         <p class="govuk-body">
           They can decide to:
         </p>
+
         <ul class="govuk-list govuk-list--bullet">
           <li>allow your appeal</li>
-          <li>reject your appeal</li>
+          <li>dismiss your appeal</li>
           <li>make a split decision</li>
         </ul>
 
-        <h2 class="govuk-heading-l">Appeals against refusal or a late planning decision</h2>
+        <h2 class="govuk-heading-l pins-guidance-h2">Appeals against refusal or no decision</h2>
 
-        <h3 class="govuk-heading-m">If your appeal is allowed</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">If your appeal is allowed</h3>
+
         <p class="govuk-body">
           Your planning application is granted. You can go ahead with the planned work.
         </p>
 
-        <h3 class="govuk-heading-m">If your appeal is rejected</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">
+          If your appeal is dismissed
+        </h3>
+
         <p class="govuk-body">
           Your application is refused.
         </p>
 
-        <h3 class="govuk-heading-m">If you get a split decision</h3>
         <p class="govuk-body">
-          Part of your planning application is granted. You can go ahead with that part of the planned work.
+          You can still talk to your local planning department about resubmitting your application. There may be small changes you can make to improve the chances of your application being granted.
         </p>
 
-        <h2 class="govuk-heading-l">Appeals against conditions</h2>
+        <h3 class="govuk-heading-m pins-guidance-h3">
+          If you get a split decision
+        </h3>
 
-        <h3 class="govuk-heading-m">If your appeal is allowed</h3>
+        <p class="govuk-body">
+          Part of your planning application is granted.
+        </p>
+
+        <p class="govuk-body">
+          You may choose to go ahead with that part of the planned work.
+        </p>
+
+        <p class="govuk-body">
+          You can also talk to your local planning department about resubmitting your application. There may be small changes you can make to improve the chances of your whole application being granted.
+        </p>
+
+        <h2 class="govuk-heading-l pins-guidance-h2">
+          Appeals against conditions
+        </h2>
+
+        <h3 class="govuk-heading-m pins-guidance-h3">
+          If your appeal is allowed
+        </h3>
+
         <p class="govuk-body">
           Any conditions you wanted to remove no longer apply to your planning permission. Any conditions you wanted to change are changed.
         </p>
 
-        <h3 class="govuk-heading-m">If your appeal is rejected</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">
+          If your appeal is dismissed
+        </h3>
+
         <p class="govuk-body">
           The conditions still apply to your planning permission.
         </p>
 
-        <h3 class="govuk-heading-m">If you get a split decision</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">
+          If you get a split decision
+        </h3>
+
         <p class="govuk-body">
           The Planning Inspector agrees with some of the conditions you want to remove or change. This could mean they:
         </p>
+
         <ul class="govuk-list govuk-list--bullet">
           <li>change a condition instead of removing it</li>
           <li>change a condition in a different way to how you wanted</li>
         </ul>
 
-        <h2 class="govuk-heading-l">If you think your decision is incorrect</h2>
+        <h2 class="govuk-heading-l pins-guidance-h2">
+          If you think your decision is incorrect
+        </h2>
+
         <p class="govuk-body">
           If you think the Planning Inspectorate's decision is incorrect, you can challenge the decision in court.
         </p>
@@ -158,14 +194,14 @@
 
       </div>
 
-     
+
     </div>
 
     <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        
+
   <div class="gem-c-contextual-footer">
-    
+
   <div class="gem-c-related-navigation">
 
 
