Fixing the version of the latest change + index update

--- a/app/views/guidance/full/v1/when-you-can-appeal.html
+++ b/app/views/guidance/full/v1/when-you-can-appeal.html
@@ -56,20 +56,20 @@
             </ol>
           </nav>
         </aside>
-
+        
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l" id="part-title">When you can appeal</h2>
-
-        <h3 class="govuk-heading-m pins-guidance-h3">Refused planning application</h3>
+        <h2 class="govuk-heading-l">When you can appeal</h2>
+        
+        <h3 class="govuk-heading-m">Refused planning application</h3>
         <p class="govuk-body">
           If your planning application has been refused for reasons you think are incorrect, you can appeal against the refusal.
         </p>
         <p class="govuk-body">
           A reason for refusal is incorrect when it goes against the local planning department's development plan and planning policies.
         </p>
-
-        <h3 class="govuk-heading-m pins-guidance-h3">Granted planning permission with conditions</h3>
+        
+        <h3 class="govuk-heading-m">Granted planning permission with conditions</h3>
         <p class="govuk-body">
           If your planning application has been granted with conditions you think are incorrect, you can appeal against the conditions.
         </p>
@@ -87,16 +87,16 @@
         <p class="govuk-body">
           You can appeal to have the conditions removed from your planning permission, or to change the conditions.
         </p>
-
-        <h3 class="govuk-heading-m pins-guidance-h3">No decision by the local planning department’s deadline</h3>
+        
+        <h3 class="govuk-heading-m">A late planning decision</h3>
         <p class="govuk-body">
-          If you have not got a decision on your planning application by your local planning department’s deadline, you can appeal against the late decision.
+          If you have not received a decision on your planning application by the date your local planning department said you would, you can appeal against the late decision.
         </p>
         <p class="govuk-body">
-          The local planning department’s deadline is usually 8 weeks from the day it acknowledged your application. But it can be longer if you agreed a different deadline.
+          This is usually 8 weeks from the day your local planning department acknowledge your application. It can be longer than this if you agreed a new deadline.
         </p>
 
-        <h2 class="govuk-heading-l pins-guidance-h2">Who can appeal</h2>
+        <h2 class="govuk-heading-l">Who can appeal</h2>
         <p class="govuk-body">
           You can only appeal if you either:
         </p>
@@ -105,9 +105,9 @@
           <li>have permission to act on behalf of the person or organisation whose name is on the application</li>
         </ul>
 
-        <h2 class="govuk-heading-l pins-guidance-h2">Your deadline to appeal</h2>
-
-        <h3 class="govuk-heading-m pins-guidance-h3">Appealing refusal or conditions</h3>
+        <h2 class="govuk-heading-l">Your deadline to appeal</h2>
+        
+        <h3 class="govuk-heading-m">Appealing refusal or conditions</h3>
         <p class="govuk-body">
           Your deadline is 6 months from the decision date on the letter from your local planning department.
         </p>
@@ -128,13 +128,13 @@
             Find out more in the <a href="#" class="govuk-link">appeal a householder planning decision guidance</a>.
           </p>
         </div>
-
-        <h3 class="govuk-heading-m pins-guidance-h3">Appealing if you have not got a decision by the local planning department’s deadline</h3>
+          
+        <h3 class="govuk-heading-m">Appealing a late planning decision</h3>
         <p class="govuk-body">
           Your deadline is 6 months from the date your decision was due.
         </p>
-
-        <h3 class="govuk-heading-m pins-guidance-h3">If you have an enforcement notice</h3>
+        
+        <h3 class="govuk-heading-m">If you have an enforcement notice</h3>
         <p class="govuk-body">
           Your deadline may be sooner if you have an enforcement notice for the same development as your planning application - or a very similar one.
         </p>
@@ -196,14 +196,14 @@
 
       </div>
 
-
+     
     </div>
 
     <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
+        
   <div class="gem-c-contextual-footer">
-
+    
   <div class="gem-c-related-navigation">
 
 
