--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,12 +58,52 @@ service-start{% extends "layout.html" %}
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
 
-                  <!-- save and return version 2 -->
+                  <!-- public guidance v1 -->
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
                       classes: "govuk-tag--green govuk-!-margin-bottom-3",
                       text: "Ready for UR"
                     }) }}
+
+                    <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+                      Appeal refused planning permission - Version 2
+                    </h3>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/guidance/full/v2/overview">Overview</a>
+                      </li>
+                      <li>
+                        <a href="/guidance/full/v2/when-you-can-appeal">When you can appeal</a>
+                      </li>
+                      <li>
+                        <a href="/guidance/full/v2/before-you-appeal">Before you appeal</a>
+                      </li>
+                      <li>
+                        <a href="/guidance/full/v2/how-to-appeal">How to appeal</a>
+                      </li>
+                      <li>
+                        <a href="/guidance/full/v2/stages-of-an-appeal">The stages of an appeal</a>
+                      </li>
+                      <li>
+                        <a href="/guidance/full/v2/your-appeal-decision">Your appeal decision</a>
+                      </li>
+                      <li>
+                        <a href="/guidance/full/v2/claim-costs-for-your-appeal">Claim costs for your appeal</a>
+                      </li>
+                      <li>
+                        <a href="/guidance/full/v2/comment-on-planning-appeal">Comment on a planning appeal</a>
+                      </li>
+                    </ul>
+
+                  </div>
+
+                  <!-- public guidance v1 -->
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+                    {{ govukTag({
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for UR"
+                    }) }}
+
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                       Appeal refused planning permission - Version 1
                     </h3>
@@ -94,18 +134,6 @@ service-start{% extends "layout.html" %}
                       </li>
                     </ul>
 
-                    <details class="govuk-details" data-module="govuk-details">
-                      <summary class="govuk-details__summary">
-                        <span class="govuk-details__summary-text">
-                          Jira Tickets (1)
-                        </span>
-                      </summary>
-                      <div class="govuk-details__text">
-                        <ul class="govuk-list govuk-list-bulleted">
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4621" target="_blank">AS-4621 - Save progress and return to appeal submissions (opens in new tab)</a></li>
-                        </ul>
-                      </div>
-                    </details>
                   </div>
 
                 </div>
