--- a/app/views/guidance/full/v1/comment-on-planning-appeal.html
+++ b/app/views/guidance/full/v1/comment-on-planning-appeal.html
@@ -55,138 +55,26 @@
             </ol>
           </nav>
         </aside>
-
+        
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l" id="part-title">
-          Comment on a planning appeal
-        </h2>
-
+        <h2 class="govuk-heading-l">Comment on a planning appeal</h2>
         <p class="govuk-body">
-          Anyone can comment on a planning appeal.
-        </p>
-
-        <p class="govuk-body">
-          The Planning Inspectorate uses your comments to help it make a decision.
-        </p>
-
-        <h3 class="govuk-heading-m pins-guidance-h3">
-          How to comment on an appeal
-        </h3>
-
-        <p class="govuk-body">
-          To submit your comments, find the appeal online.
-        </p>
-
-        <p class="govuk-body">
-          If you cannot use the online service, you can submit your comments to the Planning Inspectorate's customer support team:
-        </p>
-
-        <p class="govuk-body">
-          Email: <a href="mailto:enquiries@planninginspectorate.gov.uk">enquiries@planninginspectorate.gov.uk</a>
-        </p>
-
-        <p class="govuk-body">
-          We aim to respond within 5 working days.
-        </p>
-
-        <p class="govuk-body">
-          Telephone: 0303 444 5000
-        </p>
-
-        <p class="govuk-body">
-          Monday to Friday, 9am to 5pm (except public holidays)
-        </p>
-
-        <p class="govuk-body">
-          <a class="govuk-link" href="https://www.gov.uk/call-charges">Find out about call charges</a>
-        </p>
-
-        <h3 class="govuk-heading-m pins-guidance-h3">
-          Deadline to submit comments
-        </h3>
-
-        <p class="govuk-body">
-          Your deadline is either:
-        </p>
-
-        <ul class="govuk-list govuk-list--bullet">
-          <li>
-            5 weeks after the start date of the appeal
-          </li>
-          <li>
-            6 weeks after the date on the local planning department's enforcement notice
-          </li>
-        </ul>
-
-        <h3 class="govuk-heading-m pins-guidance-h3">
-          If you commented on the planning application
-        </h3>
-
-        <p>
-          The local planning department will forward your original comments to the Planning Inspectorate. You do not need to resubmit your comments.
-        </p>
-
-        <h3 class="govuk-heading-m pins-guidance-h3">
-          Withdraw your original comments
-        </h3>
-
-        <p>
-          If you want to withdraw your original comments, email <a href="mailto:enquiries@planninginspectorate.gov.uk">enquiries@planninginspectorate.gov.uk</a>
-        </p>
-
-        <p>
-          If you withdraw your comments, the Planning Inspectorate will not use your comments to help it make a decision.
-        </p>
-
-        <h3 class="govuk-heading-m pins-guidance-h3">
-          Taking part in a planning appeal
-        </h3>
-
-        <p>
-          Commenting is one way you can take part in a planning appeal.
-        </p>
-
-        <p class="govuk-body">
-          You can also:
-        </p>
-
-        <ul class="govuk-list govuk-list--bullet">
-          <li>
-            ask the Planning Inspectorate to view the appeal site from your property
-          </li>
-          <li>
-            ask to attend the hearing, if there is one
-          </li>
-          <li>
-            ask to attend the inquiry, if there is one
-          </li>
-        </ul>
-
-        <p>
-          Read the detailed guidance about <a href="#" class="govuk-link">taking part in an appeal</a>.
-        </p>
-
-        <!-- <p class="govuk-body">
           Any previous comments that you submitted as part of an application will be considered by the Planning Inspector. The local planning department shares these with the Planning Inspectorate, so there is no need to submit repeat comments.
         </p>
-
         <p class="govuk-body">
           The Planning Inspectorate share any comments you submit with the applicant and the local planning department.
         </p>
 
-        <h2 class="govuk-heading-l pins-guidance-h2">
-          Withdraw previous comments
-        </h2>
-
+        <h2 class="govuk-heading-l">Withdraw previous comments</h2>
         <p class="govuk-body">
           If you do not want the Inspector to consider your previous comments when making their decision, you can withdraw them.
         </p>
         <p class="govuk-body">
           To withdraw your comments...
-        </p> -->
+        </p>
 
-        <!-- Navigation-->
+<!-- Navigation-->
         <nav class="gem-c-pagination govuk-!-margin-top-9" role="navigation" aria-label="Pagination">
           <ul class="gem-c-pagination__list" data-module="track-click">
 
@@ -216,14 +104,14 @@
 
       </div>
 
-
+     
     </div>
 
     <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
+        
   <div class="gem-c-contextual-footer">
-
+    
   <div class="gem-c-related-navigation">
 
 
