--- a/app/views/guidance/full/v2/comment-on-planning-appeal.html
+++ b/app/views/guidance/full/v2/comment-on-planning-appeal.html
@@ -44,102 +44,160 @@
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">Your appeal decision
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="your-appeal-decision">Your appeal decision</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="claim-costs-for-your-appeal">Claim costs for your appeal</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="comment-on-planning-appeal">Comment on a planning appeal</a>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">Comment on a planning appeal
               </li>
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">Your appeal decision</h2>
+        <h2 class="govuk-heading-l" id="part-title">
+          Comment on a planning appeal
+        </h2>
+
         <p class="govuk-body">
-          A Planning Inspector uses evidence from you, the local planning department and other interested parties to decide your appeal.
+          Anyone can comment on a planning appeal.
         </p>
+
         <p class="govuk-body">
-          They can decide to:
+          The Planning Inspectorate uses your comments to help it make a decision.
         </p>
+
+        <h3 class="govuk-heading-m pins-guidance-h3">
+          How to comment on an appeal
+        </h3>
+
+        <p class="govuk-body">
+          To submit your comments, find the appeal online.
+        </p>
+
+        <p class="govuk-body">
+          If you cannot use the online service, you can submit your comments to the Planning Inspectorate's customer support team:
+        </p>
+
+        <p class="govuk-body">
+          Email: <a href="mailto:enquiries@planninginspectorate.gov.uk">enquiries@planninginspectorate.gov.uk</a>
+        </p>
+
+        <p class="govuk-body">
+          We aim to respond within 5 working days.
+        </p>
+
+        <p class="govuk-body">
+          Telephone: 0303 444 5000
+        </p>
+
+        <p class="govuk-body">
+          Monday to Friday, 9am to 5pm (except public holidays)
+        </p>
+
+        <p class="govuk-body">
+          <a class="govuk-link" href="https://www.gov.uk/call-charges">Find out about call charges</a>
+        </p>
+
+        <h3 class="govuk-heading-m pins-guidance-h3">
+          Deadline to submit comments
+        </h3>
+
+        <p class="govuk-body">
+          Your deadline is either:
+        </p>
+
         <ul class="govuk-list govuk-list--bullet">
-          <li>allow your appeal</li>
-          <li>reject your appeal</li>
-          <li>make a split decision</li>
+          <li>
+            5 weeks after the start date of the appeal
+          </li>
+          <li>
+            6 weeks after the date on the local planning department's enforcement notice
+          </li>
         </ul>
 
-        <h2 class="govuk-heading-l">Appeals against refusal or a late planning decision</h2>
+        <h3 class="govuk-heading-m pins-guidance-h3">
+          If you commented on the planning application
+        </h3>
 
-        <h3 class="govuk-heading-m">If your appeal is allowed</h3>
-        <p class="govuk-body">
-          Your planning application is granted. You can go ahead with the planned work.
+        <p>
+          The local planning department will forward your original comments to the Planning Inspectorate. You do not need to resubmit your comments.
         </p>
 
-        <h3 class="govuk-heading-m">If your appeal is rejected</h3>
-        <p class="govuk-body">
-          Your application is refused.
+        <h3 class="govuk-heading-m pins-guidance-h3">
+          Withdraw your original comments
+        </h3>
+
+        <p>
+          If you want to withdraw your original comments, email <a href="mailto:enquiries@planninginspectorate.gov.uk">enquiries@planninginspectorate.gov.uk</a>
         </p>
 
-        <h3 class="govuk-heading-m">If you get a split decision</h3>
-        <p class="govuk-body">
-          Part of your planning application is granted. You can go ahead with that part of the planned work.
+        <p>
+          If you withdraw your comments, the Planning Inspectorate will not use your comments to help it make a decision.
         </p>
 
-        <h2 class="govuk-heading-l">Appeals against conditions</h2>
+        <h3 class="govuk-heading-m pins-guidance-h3">
+          Taking part in a planning appeal
+        </h3>
 
-        <h3 class="govuk-heading-m">If your appeal is allowed</h3>
-        <p class="govuk-body">
-          Any conditions you wanted to remove no longer apply to your planning permission. Any conditions you wanted to change are changed.
+        <p>
+          Commenting is one way you can take part in a planning appeal.
         </p>
 
-        <h3 class="govuk-heading-m">If your appeal is rejected</h3>
         <p class="govuk-body">
-          The conditions still apply to your planning permission.
+          You can also:
         </p>
 
-        <h3 class="govuk-heading-m">If you get a split decision</h3>
-        <p class="govuk-body">
-          The Planning Inspector agrees with some of the conditions you want to remove or change. This could mean they:
-        </p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>change a condition instead of removing it</li>
-          <li>change a condition in a different way to how you wanted</li>
+          <li>
+            ask the Planning Inspectorate to view the appeal site from your property
+          </li>
+          <li>
+            ask to attend the hearing, if there is one
+          </li>
+          <li>
+            ask to attend the inquiry, if there is one
+          </li>
         </ul>
 
-        <h2 class="govuk-heading-l">If you think your decision is incorrect</h2>
-        <p class="govuk-body">
-          If you think the Planning Inspectorate's decision is incorrect, you can challenge the decision in court.
+        <p>
+          Read the detailed guidance about <a href="#" class="govuk-link">taking part in an appeal</a>.
         </p>
 
-<!-- Navigation-->
+        <!-- <p class="govuk-body">
+          Any previous comments that you submitted as part of an application will be considered by the Planning Inspector. The local planning department shares these with the Planning Inspectorate, so there is no need to submit repeat comments.
+        </p>
+
+        <p class="govuk-body">
+          The Planning Inspectorate share any comments you submit with the applicant and the local planning department.
+        </p>
+
+        <h2 class="govuk-heading-l pins-guidance-h2">
+          Withdraw previous comments
+        </h2>
+
+        <p class="govuk-body">
+          If you do not want the Inspector to consider your previous comments when making their decision, you can withdraw them.
+        </p>
+        <p class="govuk-body">
+          To withdraw your comments...
+        </p> -->
+
+        <!-- Navigation-->
         <nav class="gem-c-pagination govuk-!-margin-top-9" role="navigation" aria-label="Pagination">
           <ul class="gem-c-pagination__list" data-module="track-click">
 
             <li class="gem-c-pagination__item gem-c-pagination__item--previous">
-              <a href="stages-of-an-appeal" class="gem-c-pagination__link" rel="prev">
+              <a href="claim-costs-for-your-appeal" class="gem-c-pagination__link" rel="prev">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
                   </svg>
                   <span class="gem-c-pagination__link-text">
                     Previous
-                  </span>
-                </span>
-                  <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">The stages of an appeal</span>
-              </a>
-            </li>
-            <li class="gem-c-pagination__item gem-c-pagination__item--next">
-              <a href="claim-costs-for-your-appeal" class="gem-c-pagination__link" rel="next">
-                <span class="gem-c-pagination__link-title">
-                  <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
-                    <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
-                  </svg>
-                  <span class="gem-c-pagination__link-text">
-                    Next
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
@@ -158,14 +216,14 @@
 
       </div>
 
-     
+
     </div>
 
     <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        
+
   <div class="gem-c-contextual-footer">
-    
+
   <div class="gem-c-related-navigation">
 
 
