--- a/app/views/guidance/full/v2/how-to-appeal.html
+++ b/app/views/guidance/full/v2/how-to-appeal.html
@@ -38,13 +38,13 @@
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="before-you--appeal"> Before you appeal</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="how-to-appeal">How to appeal</a>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">How to appeal
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">Your appeal decision
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="your-appeal-decision">Your appeal decision</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="claim-costs-for-your-appeal">Claim costs for your appeal</a>
@@ -55,63 +55,100 @@
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">Your appeal decision</h2>
+        <h2 class="govuk-heading-l" id="part-title">How to appeal</h2>
         <p class="govuk-body">
-          A Planning Inspector uses evidence from you, the local planning department and other interested parties to decide your appeal.
+          You appeal using the <a href="#" class="govuk-link">appeal a planning decision service</a>.
         </p>
         <p class="govuk-body">
-          They can decide to:
+          You must submit a complete appeal by 23.59pm on the day of your deadline. Find out about <a href="#" class="govuk-link">your deadline to appeal</a>.
         </p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>allow your appeal</li>
-          <li>reject your appeal</li>
-          <li>make a split decision</li>
-        </ul>
-
-        <h2 class="govuk-heading-l">Appeals against refusal or a late planning decision</h2>
-
-        <h3 class="govuk-heading-m">If your appeal is allowed</h3>
         <p class="govuk-body">
-          Your planning application is granted. You can go ahead with the planned work.
+          An appeal is complete when it has all the documents and information the Planning Inspectorate needs to progress your appeal.
         </p>
 
-        <h3 class="govuk-heading-m">If your appeal is rejected</h3>
+        <h2 class="govuk-heading-l pins-guidance-h2">Your appeal statement</h2>
         <p class="govuk-body">
-          Your application is refused.
+          Your appeal statement is the main part of your appeal. This is where you explain your reasons for appealing.
+        </p>
+        <p class="govuk-body">
+          You can only submit this once, so it's important to get it right.
         </p>
 
-        <h3 class="govuk-heading-m">If you get a split decision</h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">How to write your appeal statement</h3>
         <p class="govuk-body">
-          Part of your planning application is granted. You can go ahead with that part of the planned work.
+          You should prepare this in a document to upload with your appeal.
         </p>
 
-        <h2 class="govuk-heading-l">Appeals against conditions</h2>
-
-        <h3 class="govuk-heading-m">If your appeal is allowed</h3>
+        <h4 class="govuk-heading-s">If you're appealing a refusal</h4>
         <p class="govuk-body">
-          Any conditions you wanted to remove no longer apply to your planning permission. Any conditions you wanted to change are changed.
+          You must explain why all the reasons for refusal are incorrect, based on planning policy.
+        </p>
+        <p class="govuk-body">
+          You can find the reasons for refusal on your decision letter. Each reason for refusal includes the relevant planning policy and document numbers.
+        </p>
+        <p class="govuk-body">
+          The Planning Officer's report explains how the local planning department has applied the policies.
+        </p>
+        <p class="govuk-body">
+          For your appeal to be successful, the Planning Inspectorate must agree that all the reasons for refusal are incorrect.
         </p>
 
-        <h3 class="govuk-heading-m">If your appeal is rejected</h3>
+        <h4 class="govuk-heading-s">If you're appealing conditions</h4>
         <p class="govuk-body">
-          The conditions still apply to your planning permission.
-        </p>
-
-        <h3 class="govuk-heading-m">If you get a split decision</h3>
-        <p class="govuk-body">
-          The Planning Inspector agrees with some of the conditions you want to remove or change. This could mean they:
+          You must explain why the conditions are either:
         </p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>change a condition instead of removing it</li>
-          <li>change a condition in a different way to how you wanted</li>
+          <li>unnecessary</li>
+          <li>irrelevant to planning</li>
+          <li>irrelevant to your development</li>
+          <li>unenforceable</li>
+          <li>vague</li>
+          <li>unreasonable</li>
         </ul>
-
-        <h2 class="govuk-heading-l">If you think your decision is incorrect</h2>
         <p class="govuk-body">
-          If you think the Planning Inspectorate's decision is incorrect, you can challenge the decision in court.
+          If you're asking for the conditions to be changed, instead of removed, you should say what you want them to be changed to.
+        </p>
+
+        <h4 class="govuk-heading-s">If you're appealing a late planning decision</h4>
+        <p class="govuk-body">
+          You must explain why your planning application should be granted,  based on planning policy.
+        </p>
+        <p class="govuk-body">
+          You should focus on the parts of your application that your local planning department is likely to disagree with, if you know what these are.
+        </p>
+
+        <h4 class="govuk-heading-s">Respond to comments from interested parties</h4>
+        <p class="govuk-body">
+          You can include responses to comments from interested parties in your appeal statement. You only need to do this if they relate to reasons for appealing.
+        </p>
+
+        <h4 class="govuk-heading-s">Supporting documents</h4>
+        <p class="govuk-body">
+          You can also include other documents that support your appeal. For example, independent reports, updated plans and drawings, and photographs.
+        </p>
+        <p class="govuk-body">
+          If you mention supporting documents in your statement, you must submit them with your appeal. If you do not, it will delay your appeal and you might miss your deadline.
+        </p>
+
+        <h4 class="govuk-heading-s">Personal information</h4>
+        <p class="govuk-body">
+          <b>xxxxx</b>
+        </p>
+
+        <h2 class="govuk-heading-l pins-guidance-h2">Draft statement of common ground</h2>
+        <p class="govuk-body">
+          A statement of common ground says what you and the local planning department agree on. You must upload a draft of this with your appeal.
+        </p>
+
+        <h3 class="govuk-heading-m pins-guidance-h3">How to write your draft statement of common ground</h3>
+        <p class="govuk-body">
+          You should draft your statement using the <a href="#" class="govuk-link">statement of common ground pro forma</a>.
+        </p>
+        <p class="govuk-body">
+          You should say what you believe your local planning department will agree with you about. After you submit your appeal, you work with your local planning department to finalise and agree the statement.
         </p>
 
 <!-- Navigation-->
@@ -119,7 +156,7 @@
           <ul class="gem-c-pagination__list" data-module="track-click">
 
             <li class="gem-c-pagination__item gem-c-pagination__item--previous">
-              <a href="stages-of-an-appeal" class="gem-c-pagination__link" rel="prev">
+              <a href="before-you-appeal" class="gem-c-pagination__link" rel="prev">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
@@ -129,11 +166,11 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">The stages of an appeal</span>
+                  <span class="gem-c-pagination__link-label">Before you appeal</span>
               </a>
             </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
-              <a href="claim-costs-for-your-appeal" class="gem-c-pagination__link" rel="next">
+              <a href="stages-of-an-appeal" class="gem-c-pagination__link" rel="next">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -143,7 +180,7 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">Claim costs for your appeal</span>
+                  <span class="gem-c-pagination__link-label">The stages of an appeal</span>
               </a>
             </li>
 
@@ -158,14 +195,14 @@
 
       </div>
 
-     
+
     </div>
 
     <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        
+
   <div class="gem-c-contextual-footer">
-    
+
   <div class="gem-c-related-navigation">
 
 
