--- a/app/views/guidance/full/v2/when-you-can-appeal.html
+++ b/app/views/guidance/full/v2/when-you-can-appeal.html
@@ -30,10 +30,10 @@
             <h2 class="govuk-body gem-c-contents-list__title">Contents</h2>
             <ol class="gem-c-contents-list__list">
 
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">Overview
-              </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="when-you-can-appeal"> When you can appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="overview"> Overview</a>
+              </li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">When you can appeal
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="before-you-appeal"> Before you appeal</a>
@@ -56,18 +56,67 @@
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">Overview</h2>
+        <h2 class="govuk-heading-l" id="part-title">When you can appeal</h2>
 
+        <h3 class="govuk-heading-m pins-guidance-h3">Refused planning application</h3>
         <p class="govuk-body">
-          This guidance is for people who want to appeal most types of planning decision, or a late planning decision.
+          If your planning application has been refused for reasons you think are incorrect, you can appeal against the refusal.
         </p>
-        
+        <p class="govuk-body">
+          A reason for refusal is incorrect when it goes against the local planning department's development plan and planning policies.
+        </p>
+
+        <h3 class="govuk-heading-m pins-guidance-h3">Granted planning permission with conditions</h3>
+        <p class="govuk-body">
+          If your planning application has been granted with conditions you think are incorrect, you can appeal against the conditions.
+        </p>
+        <p class="govuk-body">
+          A condition is incorrect when it's:
+        </p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>unnecessary</li>
+          <li>irrelevant to planning</li>
+          <li>irrelevant to your development</li>
+          <li>unenforceable</li>
+          <li>vague</li>
+          <li>unreasonable</li>
+        </ul>
+        <p class="govuk-body">
+          You can appeal to have the conditions removed from your planning permission, or to change the conditions.
+        </p>
+
+        <h3 class="govuk-heading-m pins-guidance-h3">No decision by the local planning department’s deadline</h3>
+        <p class="govuk-body">
+          If you have not got a decision on your planning application by your local planning department’s deadline, you can appeal against the late decision.
+        </p>
+        <p class="govuk-body">
+          The local planning department’s deadline is usually 8 weeks from the day it acknowledged your application. But it can be longer if you agreed a different deadline.
+        </p>
+
+        <h2 class="govuk-heading-l pins-guidance-h2">Who can appeal</h2>
+        <p class="govuk-body">
+          You can only appeal if you either:
+        </p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>made the planning application in your name</li>
+          <li>have permission to act on behalf of the person or organisation whose name is on the application</li>
+        </ul>
+
+        <h2 class="govuk-heading-l pins-guidance-h2">Your deadline to appeal</h2>
+
+        <h3 class="govuk-heading-m pins-guidance-h3">Appealing refusal or conditions</h3>
+        <p class="govuk-body">
+          Your deadline is 6 months from the decision date on the letter from your local planning department.
+        </p>
         <div class="govuk-inset-text">
           <p class="govuk-body">
-            You need different guidance if you want to appeal a refused application for:
+            Your deadline is sooner if you're appealing a refused householder planning application.
+          </p>
+          <p class="govuk-body">
+            You made a householder planning application if you applied for:
           </p>
           <ul class="govuk-list govuk-list--bullet">
             <li>householder planning permission</li>
@@ -76,25 +125,53 @@
             <li>prior approval: enlargement of a dwellinghouse by construction of additional storeys</li>
           </ul>
           <p class="govuk-body">
-            Go to the <a href="#" class="govuk-link">appeal a householder planning decision guidance</a>.
+            Find out more in the <a href="#" class="govuk-link">appeal a householder planning decision guidance</a>.
           </p>
         </div>
 
-        <h2 class="govuk-heading-l">Appealing to the Planning Inspectorate</h2>
+        <h3 class="govuk-heading-m pins-guidance-h3">Appealing if you have not got a decision by the local planning department’s deadline</h3>
+        <p class="govuk-body">
+          Your deadline is 6 months from the date your decision was due.
+        </p>
 
+        <h3 class="govuk-heading-m pins-guidance-h3">If you have an enforcement notice</h3>
         <p class="govuk-body">
-          You make your appeal to the Planning Inspectorate.
+          Your deadline may be sooner if you have an enforcement notice for the same development as your planning application - or a very similar one.
         </p>
         <p class="govuk-body">
-          The Planning Inspectorate is an independent and impartial government body that decides appeals about planning applications.
+          If you got the enforcement notice before your application was refused, your deadline is 28 days from the decision date on the letter from your local planning department.
         </p>
+        {{ govukInsetText({
+          text: "If you got the enforcement notice more than 2 years ago, your deadline is not affected."
+        }) }}
+        <p class="govuk-body">
+          If you got the enforcement notice after your application was refused, your deadline is whichever is sooner from the following:
+        </p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>28 days from the date you received the enforcement notice</li>
+          <li>6 months from the decision date on the letter from your local planning department</li>
+        </ul>
 
 <!-- Navigation-->
         <nav class="gem-c-pagination govuk-!-margin-top-9" role="navigation" aria-label="Pagination">
           <ul class="gem-c-pagination__list" data-module="track-click">
 
+            <li class="gem-c-pagination__item gem-c-pagination__item--previous">
+              <a href="overview" class="gem-c-pagination__link" rel="prev">
+                <span class="gem-c-pagination__link-title">
+                  <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
+                    <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
+                  </svg>
+                  <span class="gem-c-pagination__link-text">
+                    Previous
+                  </span>
+                </span>
+                  <span class="gem-c-pagination__link-divider visually-hidden">:</span>
+                  <span class="gem-c-pagination__link-label">Overview</span>
+              </a>
+            </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
-              <a href="when-you-can-appeal" class="gem-c-pagination__link" rel="next">
+              <a href="before-you-appeal" class="gem-c-pagination__link" rel="next">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -104,7 +181,7 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">When you can appeal</span>
+                  <span class="gem-c-pagination__link-label">Before you appeal</span>
               </a>
             </li>
 
@@ -119,14 +196,14 @@
 
       </div>
 
-     
+
     </div>
 
     <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        
+
   <div class="gem-c-contextual-footer">
-    
+
   <div class="gem-c-related-navigation">
 
 
