Small content updates for public guidance

--- a/app/views/guidance/full/v2/before-you-appeal.html
+++ b/app/views/guidance/full/v2/before-you-appeal.html
@@ -142,7 +142,7 @@
         </p>
 
         <p class="govuk-body">
-          At the hearing you and the local planning department answer questions about your appeal. This helps the Planning Inspectorate to understand all the issues in your appeal.
+          At the hearing, you and the local planning department answer questions about your appeal. This helps the Planning Inspectorate to understand all the issues in your appeal.
         </p>
 
         <p class="govuk-body">
@@ -168,7 +168,11 @@
         </p>
 
         <p class="govuk-body">
-          This is when you and the local planning department use legal representatives to question expert witnesses. The inquiry can be in-person or online and usually lasts a few days.
+          At the inquiry, you and the local planning department use legal representatives to question expert witnesses.
+        </p>
+
+        <p class="govuk-body">
+          The inquiry can be in-person or online and usually lasts a few days.
         </p>
 
         <p class="govuk-body">
