--- a/app/views/guidance/full/v2/overview.html
+++ b/app/views/guidance/full/v2/overview.html
@@ -92,7 +92,7 @@
         </p>
 
         <p class="govuk-body">
-          The Planning Inspectorate is an independent and impartial government body that decides planning appeals on behalf of the Secretary of State.
+          The Planning Inspectorate is an independent and impartial government body. It decides planning appeals on behalf of the Secretary of State.
         </p>
 
         <!-- Navigation-->
