Heading size fixes

--- a/app/views/guidance/full/v2/comment-on-planning-appeal.html
+++ b/app/views/guidance/full/v2/comment-on-planning-appeal.html
@@ -70,9 +70,9 @@
           The Planning Inspectorate uses your comments to help it make a decision.
         </p>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">
+        <h2 class="govuk-heading-l pins-guidance-h2">
           How to comment on an appeal
-        </h3>
+        </h2>
 
         <p class="govuk-body">
           To submit your comments, find the appeal online.
@@ -102,9 +102,9 @@
           <a class="govuk-link" href="https://www.gov.uk/call-charges">Find out about call charges</a>
         </p>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">
+        <h2 class="govuk-heading-l pins-guidance-h2">
           Deadline to submit comments
-        </h3>
+        </h2>
 
         <p class="govuk-body">
           Your deadline is either:
@@ -119,9 +119,9 @@
           </li>
         </ul>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">
+        <h2 class="govuk-heading-l pins-guidance-h2">
           If you commented on the planning application
-        </h3>
+        </h2>
 
         <p>
           The local planning department will forward your original comments to the Planning Inspectorate. You do not need to resubmit your comments.
@@ -139,9 +139,9 @@
           If you withdraw your comments, the Planning Inspectorate will not use your comments to help it make a decision.
         </p>
 
-        <h3 class="govuk-heading-m pins-guidance-h3">
+        <h2 class="govuk-heading-l pins-guidance-h2">
           Taking part in a planning appeal
-        </h3>
+        </h2>
 
         <p>
           Commenting is one way you can take part in a planning appeal.
