Public guidance, added link for listed buildings

--- a/app/views/guidance/full/v2/overview.html
+++ b/app/views/guidance/full/v2/overview.html
@@ -79,8 +79,12 @@
             Go to the <a href="#" class="govuk-link">appeal a householder planning decision guidance</a>.
           </p>
 
+        </div>
+
+        <div class="govuk-inset-text">
+
           <p class="govuk-body">
-            If your appeal is about listed building consent, you need the appeal a listed building consent decision guidance.
+            If your appeal is about listed building consent, you need the <a href="#" class="govuk-link">appeal a listed building consent decision guidance</a>.
           </p>
 
         </div>
