--- a/app/views/index.html
+++ b/app/views/index.html
@@ -637,11 +637,12 @@ service-start{% extends "layout.html" %}
                     <details class="govuk-details" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                          Jira Tickets (1)
+                          Jira Tickets (2)
                         </span>
                       </summary>
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list-bulleted">
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4683" target="_blank">AS-4683 - Save progress and return to appeal submissions iterations (opens in new tab)</a></li>
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-4621" target="_blank">AS-4621 - Save progress and return to appeal submissions (opens in new tab)</a></li>
                         </ul>
                       </div>
